--- a/styles.css
+++ b/styles.css
@@ -14,25 +14,27 @@ header {
     /* width: 1440px;
     height: 159px; */
     display: flex;
+    align-items: flex-end;
     justify-content: space-between;
     background-color: beige;
-    padding-right: 0.5%;
+    
 }
 header h1 {
-    float:right;
-    padding-right: 10px;
-    margin-top: 100px;
+    margin-right: 1rem;
+    
+    
 }
 .imatge-header {
     width: 193px;
-    height: 134;
-    float: left;
+    height: 160px;
+    margin-left: 1rem;
 }
 
 .projectes {
     display: flex;
     justify-content: space-around;
     flex-grow: 2;
+    
     background-image: url('imatges/codi.jpg');
     background-repeat: no-repeat;
     background-color: beige; 
@@ -40,7 +42,7 @@ header h1 {
 
 .principal {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .projecte {
@@ -53,26 +55,34 @@ header h1 {
     padding-left: 1.5%;
     padding-right: 1%;
 }
-
 .aside {
     display:flex;
     flex-direction: column;
-    padding-top: 150px;
-    width: 300px;
-    height: 791px;
+    width: 21%;
+    height: 779px;
     background-color: beige; 
+    padding-top: 11%;
 }
 .aside-item {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    margin-bottom: 15px;
+    align-items: baseline;
+    justify-content: space-between;
+    padding: 0 4% 0 4%;
+    
+}
+.aside-item h2 {
+    cursor: pointer;
+}
+.aside-item a {
+    text-decoration: none;
+    color: black;
+
 }
 .react-image {
-    width: 245px;
+    width: 246px;
     height: 155px;
 }
-
 .footer {
     height: 15%;
     display: flex;
@@ -89,6 +99,10 @@ header h1 {
 .footer-social small {
     margin-right: 1.5%;
 }
+.footer a {
+    text-decoration: none;
+    color: black;
+}
 
 .javascript-image {
     width: 155;
@@ -101,5 +115,28 @@ header h1 {
 .imatge-projecte {
     display: flex;
     justify-content: center;
+    
+}
+.quisoc {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    flex-grow: 2;
+    background-color:beige; 
+    width: 85%;
+}
+.curriculum {
+    width: 85%;
+    margin-right: .5rem;
+    margin-left: .5rem;
+}
+.curriculum span {
+    font-size: 1.35rem;
+}
+.imgUser {
+    margin: 34% 0 34% 0;
+    width: 300px;
+    height: 300px;
     
 }
