--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,6 @@ header {
 }
 header h1 {
     margin-right: 1rem;
-    
-    
 }
 .imatge-header {
     width: 193px;
@@ -77,7 +75,6 @@ header h1 {
 .aside-item a {
     text-decoration: none;
     color: black;
-
 }
 .react-image {
     width: 246px;
@@ -138,5 +135,57 @@ header h1 {
     margin: 34% 0 34% 0;
     width: 300px;
     height: 300px;
-    
+}
+.contacte {
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    flex-grow: 2;
+    background-color:beige; 
+    padding: .9rem 0;
+}
+.formulari {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    flex-grow: 2;
+    margin-top: 5rem;
+    width: 80%;
+}
+label {
+    font-size: x-large;
+    font-weight: bold;
+    margin-bottom: .4rem;
+}
+input {
+    font-size: 1.6rem;
+}
+/* .forms-estils label {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.forms-estils input {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-items: flex-end;
+} */
+.items-form {
+    display: flex;
+    padding: .9rem;
+    align-items: baseline;
+    justify-content: space-between;
+}
+textarea{
+	width:50rem;
+	height:25rem;
+	border:1px solid black;
+	border-radius:8px;
+	background-color:antiquewhite;			
+	margin:8px 0;
+	/*resize: vertical | horizontal | none | both*/
+	resize:none;
+	display:block;
 }
