--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 
 body {
     font-family: 'Poiret One', cursive;
-   
 }
 
 .container {
@@ -45,6 +44,7 @@ header h1 {
 }
 
 .projecte {
+    font-weight: 800;
     align-content: center;
     background-color:beige;
     opacity: 0.7;
@@ -57,12 +57,13 @@ header h1 {
 .aside {
     display:flex;
     flex-direction: column;
-    width: 21%;
+    min-width: 21%;
     height: 779px;
     background-color: beige; 
     padding-top: 11%;
 }
 .aside-item {
+    
     display: flex;
     flex-direction: row;
     align-items: baseline;
@@ -123,8 +124,10 @@ header h1 {
     flex-grow: 2;
     background-color:beige; 
     width: 85%;
+    border-left: .5px solid black;
 }
 .curriculum {
+    font-weight: 900;
     width: 85%;
     margin-right: .5rem;
     margin-left: .5rem;
@@ -144,13 +147,13 @@ header h1 {
     align-items: center;
     flex-grow: 2;
     background-color:beige; 
+    border-left: .5px solid black;
     
 }
 .formulari {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
     padding-top: 5rem;
     
 }
@@ -164,18 +167,21 @@ input {
 }
 .btn-input {
     font-family: 'Poiret One', cursive;
-    background-color:darkseagreen; 
+    font-size: 1.6rem;
+    font-weight: bold;
+    background-color:yellowgreen; 
     border: none;
     border-radius: 12px;
-    color: white;
+    color: #011;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 1.5rem;
+    
 }
 .btn-input:hover {
     background-color: green;
+    color: whitesmoke;
 }
 /* .forms-estils label {
     display: flex;
@@ -186,8 +192,6 @@ input {
 .forms-estils input {
     display: flex;
     flex-direction: row;
-    
-    
 } 
 
 .items-form-nom {
