--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,10 @@ body {
 
 .container {
     margin: 0 auto;
-    width: 1440px;
-    height: 850px;
+    /* width: 1440px;
+    height: 850px; */
     padding: 25px;
-}
+} 
 
 header {
     /* width: 1440px;
@@ -22,20 +22,47 @@ header {
 header h1 {
     margin-right: 1rem;
 }
+
 .imatge-header {
     width: 193px;
     height: 160px;
     margin-left: 1rem;
+}
+@media (max-width: 750px) {
+    .imatge-header {
+        width: 38.6px;
+        height: 32px;
+    }
+}
+@media (max-width: 750px) {
+    header {
+        flex-direction: row;
+        align-items: flex-start;
+    }
+}
+@media (max-width: 750px) {
+    header h1{
+        font-size: .9rem;
+        font-weight: 600;
+        margin-right: 0.4rem;
+    }
 }
 
 .projectes {
     display: flex;
     justify-content: space-around;
     flex-grow: 2;
-    
     background-image: url('imatges/codi.jpg');
     background-repeat: no-repeat;
+    padding-right: 2.8rem;
     /* background-color: beige;  */
+}
+@media (max-width: 750px) {
+    .projectes {
+        flex-direction: column;
+        background-image: none;
+        align-items: center;
+    }
 }
 
 .principal {
@@ -63,6 +90,7 @@ header h1 {
     /* background-color: beige;  */
     padding-top: 11%;
 }
+
 .aside-item {
     
     display: flex;
@@ -78,6 +106,11 @@ header h1 {
 .aside-item a {
     text-decoration: none;
     color: black;
+}
+@media (max-width: 750px) {
+    .aside {
+        display: none;
+    }
 }
 
 .footer {
@@ -99,6 +132,19 @@ header h1 {
 .footer a {
     text-decoration: none;
     color: black;
+}
+@media (max-width: 750px) {
+    .footer {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+}
+@media (max-width: 750px) {
+    .footer-social, .footer-social img {
+        flex-direction: row;
+        align-items: center;
+    }
 }
 .react-image {
     width: 246px;
@@ -164,17 +210,39 @@ label {
     font-weight: bold;
     margin-bottom: .4rem;
 }
+
+@media (max-width: 750px) {
+    label {
+        font-size: medium;
+    }
+}
+
 input {
     font-size: 1.6rem;
 }
+@media (max-width: 750px) {
+    input {
+        font-size: medium;
+        border: .1px solid grey;
+    }
+}
+
+@media (max-width: 750px) {
+    .formulari {
+        justify-content: flex-start;
+        padding: 1.5rem;
+        
+    }
+}
 .btn-input {
-    font-family: 'Poiret One', cursive;
+    font-family: inherit;
     font-size: 1.6rem;
     font-weight: bold;
     background-color:yellowgreen; 
     border: none;
     border-radius: 12px;
     color: #011;
+    margin-top: 10px;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -185,6 +253,14 @@ input {
     background-color: green;
     color: whitesmoke;
 }
+@media (max-width: 750px) {
+    .btn-input {
+        font-size: 1.2rem;
+        margin: 0 auto;
+        margin-top: 10px;
+    }
+}
+
 /* .forms-estils label {
     display: flex;
     flex-direction: row;
@@ -212,6 +288,11 @@ input {
     align-items: flex-start;
     justify-content: space-between;
 }
+@media (max-width: 750px) {
+    .items-form-cognom {
+        padding-right: 1.9rem;
+    }
+}
 .items-form-correu {
     display: flex;
     padding-top: .9rem;
@@ -219,6 +300,11 @@ input {
     padding-right: 1.6rem;
     align-items: flex-start;
     justify-content: space-between;
+}
+@media (max-width: 750px) {
+    .items-form-correu {
+        padding-right: .9rem;
+    }
 }
 textarea{
 	width:40rem;
@@ -229,5 +315,14 @@ textarea{
 	margin:8px 0;
 	/*resize: vertical | horizontal | none | both*/
 	resize:none;
-	display:block;
+	/* display:block; */
+    
+}
+@media (max-width: 750px) {
+    textarea {
+        width: 20rem;
+        height: 10rem;
+        margin: 0 auto;
+        
+    }
 }
