--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ header h1 {
     flex-grow: 2;
     /* background-color:beige;  */
     width: 85%;
-    border-left: .5px solid black;
+    /* border-left: .5px solid black; */
 }
 .curriculum {
     font-weight: 900;
@@ -195,7 +195,7 @@ header h1 {
     align-items: center;
     flex-grow: 2;
     /* background-color:beige;  */
-    border-left: .5px solid black;
+    /* border-left: .5px solid black; */
     
 }
 .formulari {
