--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,18 @@
 
 body {
-    font-family: 'Poiret One', cursive;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
 }
-
+@media (max-width: 390px) {
+    body {
+        font-size: 2rem;
+    }
+}
 .container {
     margin: 0 auto;
-    width: 1440px;
-    height: 100vh; 
+    /* width: 1440px;
+    height: 100vh;   */
+   
     padding: 25px;
 } 
 
@@ -28,24 +34,31 @@ header h1 {
     height: 160px;
     margin-left: 1rem;
 }
-@media (max-width: 750px) {
+
+@media (max-width: 390px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+        
+        justify-content: center; 
+    }
+}
+@media (max-width: 390px) {
+    header h1{
+        font-size: 1rem;
+        margin-right: 0.4rem;
+    }
+}
+@media (max-width: 390px) {
     .imatge-header {
         width: 38.6px;
         height: 32px;
     }
 }
-@media (max-width: 750px) {
-    header {
-        flex-direction: row;
-        align-items: flex-start;
-    }
-}
-@media (max-width: 750px) {
-    header h1{
-        font-size: .9rem;
-        font-weight: 600;
-        margin-right: 0.4rem;
-    }
+.principal {
+    display: flex;
+    justify-content: space-between;
+   
 }
 
 .projectes {
@@ -54,24 +67,11 @@ header h1 {
     flex-grow: 2;
     background-image: url('imatges/codi.jpg');
     background-repeat: no-repeat;
-    padding-right: 2.8rem;
+    /* padding-right: 2.8rem; */
     /* background-color: beige;  */
-}
-@media (max-width: 750px) {
-    .projectes {
-        flex-direction: column;
-        background-image: none;
-        align-items: center;
-    }
-}
-
-.principal {
-    display: flex;
-    justify-content: space-between;
 }
 
 .projecte {
-    font-weight: 800;
     
     align-content: center;
     background-color:beige; 
@@ -82,6 +82,28 @@ header h1 {
     padding-left: 1.5%;
     padding-right: 1%;
 }
+#projecte-final {
+    padding-bottom: .7rem;
+}
+@media (max-width: 390px) {
+    .projectes {
+        background-image: none;
+        flex-direction: column;
+        justify-content: space-evenly;
+        padding-left: 19%;
+    }
+}
+@media (max-width: 390px ) {
+    .projecte { 
+        margin-bottom: -3%;
+        /* width: 75%;
+        height: 30%; */
+        align-content: space-around;
+        opacity: 1;
+        font-size: 1.5rem;
+    }
+}
+
 .aside {
     display:flex;
     flex-direction: column;
@@ -107,7 +129,7 @@ header h1 {
     text-decoration: none;
     color: black;
 }
-@media (max-width: 750px) {
+@media (max-width: 390px) {
     .aside {
         display: none;
     }
@@ -133,19 +155,22 @@ header h1 {
     text-decoration: none;
     color: black;
 }
-@media (max-width: 750px) {
+@media (max-width: 390px) {
     .footer {
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
+        font-size: 1rem;
     }
 }
-@media (max-width: 750px) {
+@media (max-width: 390px) {
     .footer-social, .footer-social img {
         flex-direction: row;
         align-items: center;
     }
 }
+
+
 .react-image {
     width: 246px;
     height: 155px;
@@ -174,99 +199,46 @@ header h1 {
     width: 85%;
     /* border-left: .5px solid black; */
 }
+
 .curriculum {
-    font-weight: 900;
+    font-weight: 800;
     width: 85%;
     margin-right: .5rem;
     margin-left: .5rem;
 }
+@media (max-width: 390px) {
+    .curriculum {
+        font-size: 1rem;
+    }
+}
 .curriculum span {
     font-size: 1.35rem;
+}
+
+@media (max-width: 390px) {
+    .curriculum span {
+        font-size: 1.35rem;
+        color:grey;
+    }
 }
 .imgUser {
     margin: 34% 0 34% 0;
     width: 300px;
     height: 300px;
 }
-.contacte {
-    display: flex;
-    flex-direction: column;
-    justify-content:start;
-    align-items: center;
-    flex-grow: 2;
-    /* background-color:beige;  */
-    /* border-left: .5px solid black; */
-    
-}
-.formulari {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding-top: 5rem;
-    
-}
-label {
-    font-size: x-large;
-    font-weight: bold;
-    margin-bottom: .4rem;
-}
-
-@media (max-width: 750px) {
-    label {
-        font-size: medium;
+@media (max-width: 390px) {
+    .imgUser {
+        width: 150px;
+        height: 150px;
     }
 }
-
-input {
-    font-size: 1.6rem;
-}
-@media (max-width: 750px) {
-    input {
-        font-size: medium;
-        border: .1px solid grey;
-    }
-}
-
-@media (max-width: 750px) {
-    .formulari {
-        justify-content: flex-start;
-        padding: 1.5rem;
-        
-    }
-}
-.btn-input {
-    font-family: inherit;
-    font-size: 1.6rem;
-    font-weight: bold;
-    background-color:yellowgreen; 
-    border: none;
-    border-radius: 12px;
-    color: #011;
-    margin-top: 10px;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    
-}
-.btn-input:hover {
-    background-color: green;
-    color: whitesmoke;
-}
-@media (max-width: 750px) {
-    .btn-input {
-        font-size: 1.2rem;
-        margin: 0 auto;
-        margin-top: 10px;
-    }
-}
-
 /* .forms-estils label {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
 } */
+
 .forms-estils input {
     display: flex;
     flex-direction: row;
@@ -288,11 +260,7 @@ input {
     align-items: flex-start;
     justify-content: space-between;
 }
-@media (max-width: 750px) {
-    .items-form-cognom {
-        padding-right: 1.9rem;
-    }
-}
+
 .items-form-correu {
     display: flex;
     padding-top: .9rem;
@@ -301,11 +269,7 @@ input {
     align-items: flex-start;
     justify-content: space-between;
 }
-@media (max-width: 750px) {
-    .items-form-correu {
-        padding-right: .9rem;
-    }
-}
+
 textarea{
 	width:40rem;
 	height:20rem;
@@ -317,12 +281,4 @@ textarea{
 	resize:none;
 	/* display:block; */
     
-}
-@media (max-width: 750px) {
-    textarea {
-        width: 20rem;
-        height: 10rem;
-        margin: 0 auto;
-        
-    }
 }
