--- a/contacte.css
+++ b/contacte.css
@@ -1,120 +1,115 @@
 .contacte {
-    display: flex;
-    flex-direction: column;
-    justify-content:start;
-    align-items: center;
-    flex-grow: 2;
-    /* background-color:beige;  */
-    /* border-left: .5px solid black; */
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  flex-grow: 2;
+  background-color:beige;  
+  /* border-left: .5px solid black; */
 }
 @media (max-width: 390px) {
-    .contacte {
-        font-size: 2.5rem;
-    }
+  .contacte {
+    font-size: .5rem;
+  }
 }
 
 .formulari {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 5rem;
 }
 
 label {
-    font-size: inherit;
-    font-weight: bold;
-    margin-bottom: .4rem;
+  font-size: inherit;
+  font-weight: bold;
+  margin-bottom: 0.4rem;
 }
 @media (max-width: 390px) {
-    label {
-        font-size: 3rem;
-        font-weight: inherit;
-    }
+  label {
+    font-size: 1.5rem;
+    font-weight: inherit;
+  }
 }
 
 input {
-    font-size: 1.6rem;
-    font-family: inherit;
+  font-size: 1.6rem;
+  font-family: inherit;
 }
 
-@media (max-width: 750px) {
-    input {
-        font-size: 1.8rem;
-        font-weight: inherit;
-        
-    }
+@media (max-width: 390px) {
+  input {
+    font-size: 1.8rem;
+    font-weight: inherit;
+  }
 }
 
-@media (max-width: 750px) {
-    .formulari {
-        justify-content: flex-start;
-        padding: 1.5rem;
-        
-    }
+@media (max-width: 390px) {
+  .formulari {
+    justify-content: flex-start;
+    padding-left: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
 }
 
 .btn-input {
-    font-family: inherit;
-    font-size: 1.6rem;
-    font-weight: bold;
-    background-color:yellowgreen; 
-    border: none;
-    border-radius: 12px;
-    color: #011;
-    margin-top: 10px;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    
+  font-family: inherit;
+  font-size: 1.6rem;
+  font-weight: bold;
+  background-color: yellowgreen;
+  border: none;
+  border-radius: 12px;
+  color: #011;
+  margin-top: 10px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
 }
 .btn-input:hover {
-    background-color: green;
-    color: whitesmoke;
+  background-color: green;
+  color: whitesmoke;
 }
 
-
 .items-form-nom {
-    display: flex;
-    padding-top: .9rem;
-    padding-bottom: .9rem;
-    align-items: flex-start;
-    justify-content: space-between;
+  display: flex;
+  padding-top: 0.9rem;
+  padding-bottom: 0.9rem;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 .items-form-cognom {
-    display:flex;
-    padding-top: .9rem;
-    padding-bottom: .9rem;
-    padding-right: 2.5rem;
-    align-items: flex-start;
-    justify-content: space-between;
+  display: flex;
+  padding-top: 0.9rem;
+  padding-bottom: 0.9rem;
+  padding-right: 2.5rem;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 .items-form-correu {
-    display: flex;
-    padding-top: .9rem;
-    padding-bottom: .9rem;
-    padding-right: 1.6rem;
-    align-items: flex-start;
-    justify-content: space-between;
+  display: flex;
+  padding-top: 0.9rem;
+  padding-bottom: 0.9rem;
+  padding-right: 1.6rem;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
-textarea{
-	width:40rem;
-	height:20rem;
-	border:1px solid black;
-	border-radius:8px;
-	background-color:antiquewhite;			
-	margin:8px 0;
-	/*resize: vertical | horizontal | none | both*/
-	/* resize:none; */
-	/* display:block; */
+textarea {
+  width: 40rem;
+  height: 20rem;
+  border: 1px solid black;
+  border-radius: 8px;
+  background-color: antiquewhite;
+  margin: 8px 0;
+  /*resize: vertical | horizontal | none | both*/
+  /* resize:none; */
+  /* display:block; */
 }
 @media (max-width: 390px) {
-    textarea {
-        
-        margin: 0 auto;
-        
-    }
+  textarea {
+    margin: 0 auto;
+  }
 }
