--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ header h1 {
     align-items: flex-start;
 } */
 
-.forms-estils input {
+/* .forms-estils input {
     display: flex;
     flex-direction: row;
 } 
@@ -278,7 +278,7 @@ textarea{
 	background-color:antiquewhite;			
 	margin:8px 0;
 	/*resize: vertical | horizontal | none | both*/
-	resize:none;
+	/*resize:none;
 	/* display:block; */
     
-}
+/*}]*
